# ollama-chat-docker

./: .gitignore  Readme.md  docker-compose.yaml  docker-compose_greenboost.yaml  docker-compose_nogreenboost.yaml  nginx-example
backend/: Dockerfile  README.md  pyproject.toml
backend/mychat_backend/: main.py
backend/mychat_backend/endpoints/: rag_chat.py
backend/mychat_backend/services/: bla.json  brave_search.py
backend/tests/: test_brave_search.py  test_rag_chat.py
frontend/: api.js  app.js  index.html  style.css
web-ui/: index.html
